crates/oxc_css/tests/error/less/mixin/definition-commas.snap
---
source: crates/oxc_css/tests/error.rs
---
error: component value is expected
  ┌─ definition-commas.less:1:13
  │
1 │ .mixin(@arg,,) {}
  │             ^


